using System.Security.Cryptography;

namespace Pancake.SceneFlow
{
    public static class Constant
    {
        public const string LAUNCHER_SCENE = "launcher";
        public const string PERSISTENT_SCENE = "persistent";
        public const string MENU_SCENE = "menu";
        public const string GAMEPLAY_SCENE = "gameplay";

        public const string USER_CURRENT_COIN = "user_current_coin";
        
        public const string IAP_DOUBLE_COIN = "iap_double_coin";
        public const string IAP_UNLOCK_ALL_SKIN = "iap_unlock_all_skin";
        public const string IAP_VIP = "iap_vip";
        
        // GAMEPLAY //
        public const string EMPTY = "Empty"; 
        public const string IDLE_2_RUN = "Idle2Run";
        public const string IDLE_2_BIKE = "Idle2Bike";
        public const string SEED_FARM = "SeedFarm";
        public const string WATER_FARM = "WaterFarm";
        public const string HARVEST_FARM = "HarvestFarm";
        public const string HARVEST_FRUIT = "HarvestFruit";

        public const string TREE_SHAKE = "Shake";

        public const string SLAVE_RELAX = "Relax";

        public const string SHOPKEEPER_IDLE = "Idle";
        public const string SHOPKEEPER_WAVE = "WavePlayer";
        public const string SHOPKEEPER_AFTERSELL = "AfterSell";
        public const string SHOPKEEPER_TALKING = "Talking";

        public const string FISH_IDLE = "Idle";
        public const string FISH_CAUGHT = "Caught";

        public const string EXTEND_FIELD_TAG = "ExtendField";
        public const string CAVE_TAG = "Cave";
        public const string MAIN_TAG = "Main";
    }
}